# Strova

./: .gitignore  CMakeLists.txt  LICENSE  PATCH_NOTES_UI_UNIFICATION.txt  main.cpp  main.h
app/: App.cpp  App.h  AppPersistenceUi.inl  AppProjectPersistence.inl  AppThumbnailCache.inl
brush/: BrushCreatorScreen.cpp  BrushCreatorScreen.h  BrushResourceManager.cpp  BrushResourceManager.h
core/: AppSettings.cpp  AppSettings.h  BrushRuntime.h  BrushSystem.h  DebugLog.h  DrawingEngine.cpp  DrawingEngine.h  Exporter.cpp  Exporter.h  FlowCapturer.h  Frame.h  Gradient.h  JobSystem.h  Layer.h  LayerRenderUtil.h  LayerTree.h  Project.h  ProjectData.h  ProjectIO.cpp  ProjectIO.h  ProjectIO_LoadFrames.cpp  RasterSurface.h  RenderCacheManager.h  SerializationUtils.h  Stroke.h  StrovaLimits.h  Theme.h  TimelineTypes.h  Tool.h  ToolBank.cpp  ToolBank.h  ToolRegistry.cpp  ToolRegistry.h
editor/: Editor.cpp  Editor.h  EditorDiagnosticsOverlay.inl
launcher/: LauncherScreen.cpp  LauncherScreen.h
platform/: AppPaths.cpp  AppPaths.h  FileDialog.cpp  FileDialog.h
plugin/: PLUGIN_SDK_NOTES.txt  PluginABI.h  PluginAPI.h  PluginDocumentModel.cpp  PluginDocumentModel.h  PluginFlowBridge.cpp  PluginFlowBridge.h  PluginHost.cpp  PluginHost.h  PluginManager.cpp  PluginManager.h  PluginPackage.cpp  PluginPackage.h  PluginProjectData.cpp  PluginProjectData.h  PluginRegistry.cpp  PluginRegistry.h  PluginSecurity.cpp  PluginSecurity.h
render/: BrushRenderer.cpp  BrushRenderer.h  Renderer.cpp  Renderer.h
ui/: BrushPreviewCache.h  ColorPicker.cpp  ColorPicker.h  DockLayoutState.h  DockManager.cpp  DockManager.h  Font.h  IconButton.cpp  IconButton.h  Launcher.cpp  Launcher.h  Rounded.h  Sidebar.cpp  Sidebar.h  SplashScreen.cpp  SplashScreen.h  TextRenderer.h  Timeline.cpp  Timeline.h  ToolBar.cpp  ToolBar.h  ToolOptionsPanel.cpp  ToolOptionsPanel.h  ToolTip.cpp  ToolTip.h  UI.cpp  UI.h  UIButton.h  UILayout.cpp  UILayout.h  UiPrimitives.h
update/: UpdateManager.cpp  UpdateManager.h
